--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,6 +32,13 @@ user.name=Informe o nome:
 user.email=Informe o e-mail:
 user.password=Informe a senha:
 
+endereco.logradouro = Informe Logradouro:
+endereco.cidade = Informe Cidade:
+endereco.estado = Informe Estado:
+endereco.numero = Informe Numero:
+endereco.cep = Informe CEP:
+
+
 manterUsuario.label.usuario=Informe um critério de busca
 
 
