Exercicio The Challenge

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ footer.title.head=Trabalho de JavaEE - Professor Rodrigo Noll
 footer.title.detail=Instituto Federal de Educação, Ciência e Tecnologia do Rio Grande do Sul - IFRS - Câmpus Canoas 
 
 menu.title=Usuários 
+menu.title.automovel=Automóvel
+menu.subtitle.automovel=Gerenciamento de Automóveis
 menu.subtitle=Gerenciamento de usuários
 breadcrumb-1=Home
  
@@ -38,6 +40,14 @@ endereco.estado = Informe Estado:
 endereco.numero = Informe Numero:
 endereco.cep = Informe CEP:
 
+automovel: Automóvel
+automovel.empty: Não há registros de automóveis
+
+automovel.modelo = Informe Modelo:
+automovel.marca = Informe Marca:
+automovel.placa = Informe Placa:
+automovel.ano = Informe Ano:
+automovel.RENAVAN = Informe RENAVAN
 
 manterUsuario.label.usuario=Informe um critério de busca
 
