--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -47,7 +47,8 @@ automovel.modelo = Informe Modelo:
 automovel.marca = Informe Marca:
 automovel.placa = Informe Placa:
 automovel.ano = Informe Ano:
-automovel.RENAVAN = Informe RENAVAN
+automovel.RENAVAN = Informe RENAVAN:
+automovel.data = Informe Data:
 
 manterUsuario.label.usuario=Informe um critério de busca
 
